# goeff

./: .gitignore  .gitmodules  Cargo.toml  chat_response.json  model_response.json
docker/: docker-compose.yaml
docker/api_server/: Dockerfile
docker/file_server/config/sites-available/: hellmut.conf
lib/goeff_client/: Cargo.toml  bacon.toml  index.html  index.js  style.css
lib/goeff_client/src/: api.rs  lib.rs  state.rs
lib/goeff_client/src/view/: chat.rs  footer.rs  header.rs  mod.rs
lib/goeff_client/src/view/ident/: goeff_id.rs  goeff_style.rs  mod.rs
lib/goeff_client/src/view/style/: goeff.rs
lib/goeff_client/styles/: goeff.css  index.css  reset.css
lib/goeff_core/: Cargo.toml
lib/goeff_core/src/: data.rs
lib/hellm_web_client/: Cargo.toml  index.html  style.css
lib/hellm_web_client/src/: lib.rs
lib/hellm_web_client/src/view/: chat.rs
lib/hellmut_client/: Cargo.toml  index.js
lib/hellmut_client/src/: lib.rs
tools/: build.sh  build_dist  build_prod  launch_dev  launch_goeff  launch_local  launch_prod  parse_styles
tools/build_dist_data/: docker-compose.yaml
tools/build_dist_data/api_server/: Dockerfile
tools/launch_data/: docker-compose.yaml  launch.sh
tools/launch_data/api_server/: Dockerfile
tools/launch_data/file_server/: Dockerfile
tools/launch_data/file_server/config/certs/: fullchain.pem
tools/launch_data/file_server/config/sites-available/: hellmut.conf
tools/launch_local_data/: docker-compose.yaml
tools/launch_local_data/file_server/config/: nginx.conf
tools/launch_local_data/file_server/config/certs/: privkey.pem
