[workspace]
members = [
    "lib/*",
    # "bin/*"
]

exclude = [ ]



[workspace.package]
authors = [ "lucas muller <muller.lucas@mailbox.org>" ]
edition = "2021"
version = "0.1.0"



[workspace.dependencies]
# hellmut
# -------
hell_core       = { path = "./hellmut/lib/hell_core" }
hell_utils_web  = { path = "./hellmut/lib/hell_utils_web" }

# extern
# ------
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"

# macros
paste = "1.0.12"

[workspace.dependencies.web-sys]
version = "0.3.61"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "Node",
    "Window",
    "DomTokenList",
]
