[workspace]
members = [
    "lib/*",
    "bin/*"
]

exclude = [ ]



[workspace.package]
authors = [ "lucas muller <muller.lucas@mailbox.org>" ]
edition = "2021"
version = "0.1.0"



[workspace.dependencies]
# hellmut
# -------
hell_core           = { path = "./hellmut/lib/hell_core" }
hell_mod_web_client = { path = "./hellmut/lib/hell_mod_web_client" }

# extern
# ------
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"

# macros
paste = "1.0.12"
axum = "0.6.16"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }

[workspace.dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Node",
    "Window",
    "DomTokenList",
]

