[workspace]
members = [
    "lib/*",
    "bin/*"
]

exclude = [ ]



[workspace.package]
authors = [ "lucas muller <muller.lucas@mailbox.org>" ]
edition = "2021"
version = "0.1.0"



[workspace.dependencies]
# hellmut
# -------
hell_core           = { path = "./hellmut/lib/hell_core" }
hell_mod_web_client = { path = "./hellmut/lib/hell_mod_web_client" }
hell_mod_llm        = { path = "./hellmut/lib/hell_mod_llm" }

# extern
# ------
wasm-bindgen             = "0.2.84"
wasm-bindgen-futures     = "0.4.34"
console_error_panic_hook = "0.1.7"
js-sys                   = "0.3.61"
async-trait              = "0.1.68"
axum               = "0.6.16"
dotenv             = "0.15.0"
paste              = "1.0.12"
tokio              = { version = "1.27.0", features = ["full"] }
tracing            = "0.1.37"
tracing-subscriber = "0.3.16"
serde              = { version = "1.0.160", features = ["derive"] }
serde_json         = "1.0.96"
serde-wasm-bindgen = "0.5"
reqwest            = { version = "0.11", features = ["json"] }

[workspace.dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "Document",
    "DomTokenList",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Headers",
    "Node",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "Window",
]

