[package]
name = "hellm_web_client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
# create a dynamic library
crate-type = [ "cdylib" ]

[dependencies]
hell_core.workspace = true
hell_utils_web.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
