[package]
name = "hellmut_client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
# create a dynamic library
crate-type = [ "cdylib" ]

[dependencies]
# hust
hell_error.workspace = true
hell_web.workspace = true

# extern
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
